@@ -1,3 +1,9 @@
+Development Portal (2014-08-19 shi)
+==============================
+Original icons for themeing
+Fixed original.css
+
+
 Development Portal (2014-08-18 shi)
 ==============================
 Tint mode for themeing
